--- a/README
+++ b/README
@@ -41,6 +41,8 @@ REQUIREMENTS:
                      ≥ 5.3 for bounded loops in BPF program
                      ≥ 5.4 for pidfd and signed Verity images
                      ≥ 5.7 for CLONE_INTO_CGROUP, BPF links and the BPF LSM hook
+                     ≥ 5.14 for quotactl_fd()
+                     ≥ 6.6 for quota support on tmpfs
 
         ⛔ Kernel versions below 3.15 ("minimum baseline") are not supported at
         all, and are missing required functionality (e.g. CLOCK_BOOTTIME
